--- a/helpdesk/src/main/resources/application.properties
+++ b/helpdesk/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#Datasource
+spring.datasource.url = jdbc:mysql://localhost:3306/helpdesk
+spring.datasource.username = root
+spring.datasource.userpassword = root
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+spring.jpq.show-sql = true
+spring.jpa.hibernate-ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
