--- a/helpdesk/src/main/resources/application.properties
+++ b/helpdesk/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #Datasource
 spring.datasource.url = jdbc:mysql://localhost:3306/helpdesk
-spring.datasource.username = "root"
-spring.datasource.userpassword = "root"
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
